[commons-io] remove dependency