@@ -1,9 +1,6 @@
 package stubidp.test.devpki;
 
-import org.apache.commons.io.IOUtils;
-
 import java.io.IOException;
-import java.io.InputStream;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 
@@ -13,8 +10,7 @@ public class PemCertificateStrings {
 
     private static String readFile(String name) {
         try {
-            final InputStream inputStream = PemCertificateStrings.class.getClassLoader().getResourceAsStream("dev-keys/" + name);
-            return IOUtils.toString(inputStream, UTF_8);
+            return new String(PemCertificateStrings.class.getResourceAsStream("/dev-keys/" + name).readAllBytes(), UTF_8);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
